# grupal_paralela

./: CMakeLists.txt  blelloch.cpp  blelloch.h  hillis_steele.cpp  hillis_steele.h  histograma.cpp  histograma.h  main.cpp  main2.cpp  tarea.txt
